{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 1146,
  "lineage": "88fd7d35-b3ef-44fc-e614-cf714e84b624",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "alvin_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0294a06f44ec7dec0",
            "association_id": "eipassoc-018d540de8a9152c3",
            "domain": "vpc",
            "id": "eipalloc-0294a06f44ec7dec0",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0a8fad495850e9fb7",
            "private_dns": "ip-70-0-4-185.ap-southeast-2.compute.internal",
            "private_ip": "70.0.4.185",
            "public_dns": "ec2-3-104-126-206.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "3.104.126.206",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Alvin EIP 1 | ap-southeast-2a"
            },
            "tags_all": {
              "Name": "Alvin EIP 1 | ap-southeast-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "alvin_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f04d98347926d03",
            "association_id": "eipassoc-0b8fc3f5c3c70afa2",
            "domain": "vpc",
            "id": "eipalloc-01f04d98347926d03",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-00912210725a8e7f0",
            "private_dns": "ip-70-0-20-211.ap-southeast-2.compute.internal",
            "private_ip": "70.0.20.211",
            "public_dns": "ec2-54-79-233-43.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.79.233.43",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Alvin EIP 2 | ap-southeast-2b"
            },
            "tags_all": {
              "Name": "Alvin EIP 2 | ap-southeast-2b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "alvin_al2_bh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c641f2290e9cd048",
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:instance/i-02f68f89ad998beca",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f68f89ad998beca",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "alvin-keypair-sydney",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ca8a0220d057771a",
            "private_dns": "ip-70-0-0-155.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "70.0.0.155",
            "public_dns": "ec2-13-236-178-16.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.236.178.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-southeast-2:105976787140:key/262c88a5-2d33-4c3f-9078-bce56bed8929",
                "throughput": 125,
                "volume_id": "vol-0fb5159ef0feb909d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f00f5818d426b47",
            "tags": {
              "Environment": "Dev",
              "Inspector Resource Group": "Alvin",
              "Name": "Alvin Amazon Linux 2 | Bastion Host",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Environment": "Dev",
              "Inspector Resource Group": "Alvin",
              "Name": "Alvin Amazon Linux 2 | Bastion Host",
              "Terraform": "Yes"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c310bf441a5c3bba"
            ]
          },
          "dependencies": [
            "aws_security_group.alvin_bh_sg",
            "aws_subnet.alvin_subnet_1a",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "alvin_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:internet-gateway/igw-004d1a6d6982c70e2",
            "id": "igw-004d1a6d6982c70e2",
            "owner_id": "105976787140",
            "tags": {
              "Name": "alvin_igw"
            },
            "tags_all": {
              "Name": "alvin_igw"
            },
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alvin_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:105976787140:loadbalancer/app/alvin-webapp-alb/7ed3db04efab76f6",
            "arn_suffix": "app/alvin-webapp-alb/7ed3db04efab76f6",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alvin-webapp-alb-1510542698.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:105976787140:loadbalancer/app/alvin-webapp-alb/7ed3db04efab76f6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alvin-webapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0403e8a29674cd1a3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f00f5818d426b47"
              },
              {
                "subnet_id": "subnet-09484f1ab2d0b5ef9"
              }
            ],
            "subnets": [
              "subnet-04f00f5818d426b47",
              "subnet-09484f1ab2d0b5ef9"
            ],
            "tags": {
              "Name": "alvin_alb"
            },
            "tags_all": {
              "Name": "alvin_alb"
            },
            "vpc_id": "vpc-01663faaf221c0d0e",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.alvin_subnet_1a",
            "aws_subnet.alvin_subnet_1b",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alvin_alb_listener_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:105976787140:listener/app/alvin-webapp-alb/7ed3db04efab76f6/0d841f73aac84211",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:105976787140:targetgroup/alvin-alb-tg/d0d461b990ea6c73",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:105976787140:listener/app/alvin-webapp-alb/7ed3db04efab76f6/0d841f73aac84211",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:105976787140:loadbalancer/app/alvin-webapp-alb/7ed3db04efab76f6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "alvin_alb_listener_HTTP"
            },
            "tags_all": {
              "Name": "alvin_alb_listener_HTTP"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alvin_alb",
            "aws_lb_target_group.alvin_alb_target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.alvin_subnet_1a",
            "aws_subnet.alvin_subnet_1b",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alvin_alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:105976787140:targetgroup/alvin-alb-tg/d0d461b990ea6c73",
            "arn_suffix": "targetgroup/alvin-alb-tg/d0d461b990ea6c73",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:105976787140:targetgroup/alvin-alb-tg/d0d461b990ea6c73",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alvin-alb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "alvin-alb-target-group"
            },
            "tags_all": {
              "Name": "alvin-alb-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "alvin_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0294a06f44ec7dec0",
            "connectivity_type": "public",
            "id": "nat-044ac2538896d90a5",
            "network_interface_id": "eni-0a8fad495850e9fb7",
            "private_ip": "70.0.4.185",
            "public_ip": "3.104.126.206",
            "subnet_id": "subnet-04f00f5818d426b47",
            "tags": {
              "Name": "Alvin NAT Gateway 1 | ap-southeast-2a"
            },
            "tags_all": {
              "Name": "Alvin NAT Gateway 1 | ap-southeast-2a"
            }
          },
          "dependencies": [
            "aws_eip.alvin_eip_1",
            "aws_subnet.alvin_subnet_1a",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "alvin_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01f04d98347926d03",
            "connectivity_type": "public",
            "id": "nat-072be4b79ee6f0903",
            "network_interface_id": "eni-00912210725a8e7f0",
            "private_ip": "70.0.20.211",
            "public_ip": "54.79.233.43",
            "subnet_id": "subnet-09484f1ab2d0b5ef9",
            "tags": {
              "Name": "Alvin NAT Gateway 2 | ap-southeast-2b"
            },
            "tags_all": {
              "Name": "Alvin NAT Gateway 2 | ap-southeast-2b"
            }
          },
          "dependencies": [
            "aws_eip.alvin_eip_2",
            "aws_subnet.alvin_subnet_1b",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alvin_rt_priv_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:route-table/rtb-02f23a765abcc6dbd",
            "id": "rtb-02f23a765abcc6dbd",
            "owner_id": "105976787140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-044ac2538896d90a5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Alvin Private RT | App Tier"
            },
            "tags_all": {
              "Name": "Alvin Private RT | App Tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.alvin_eip_1",
            "aws_nat_gateway.alvin_nat_1",
            "aws_subnet.alvin_subnet_1a",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alvin_rt_priv_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:route-table/rtb-07fd451c3d9004351",
            "id": "rtb-07fd451c3d9004351",
            "owner_id": "105976787140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-072be4b79ee6f0903",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Alvin Private RT | Database Tier"
            },
            "tags_all": {
              "Name": "Alvin Private RT | Database Tier"
            },
            "timeouts": null,
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.alvin_eip_2",
            "aws_nat_gateway.alvin_nat_2",
            "aws_subnet.alvin_subnet_1b",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "alvin_rt_pub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:route-table/rtb-06ebd026c6b981465",
            "id": "rtb-06ebd026c6b981465",
            "owner_id": "105976787140",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-004d1a6d6982c70e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Alvin Public RT"
            },
            "tags_all": {
              "Name": "Alvin Public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.alvin_igw",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alvin_sn_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eb1f1151a61db57",
            "route_table_id": "rtb-06ebd026c6b981465",
            "subnet_id": "subnet-04f00f5818d426b47"
          },
          "dependencies": [
            "aws_internet_gateway.alvin_igw",
            "aws_route_table.alvin_rt_pub_1",
            "aws_subnet.alvin_subnet_1a",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alvin_sn_rt_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c70ec633c7f1689",
            "route_table_id": "rtb-06ebd026c6b981465",
            "subnet_id": "subnet-09484f1ab2d0b5ef9"
          },
          "dependencies": [
            "aws_internet_gateway.alvin_igw",
            "aws_route_table.alvin_rt_pub_1",
            "aws_subnet.alvin_subnet_1b",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alvin_sn_rt_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c087bab5c380ddc5",
            "route_table_id": "rtb-02f23a765abcc6dbd",
            "subnet_id": "subnet-09bb06f8c914d14db"
          },
          "dependencies": [
            "aws_eip.alvin_eip_1",
            "aws_nat_gateway.alvin_nat_1",
            "aws_route_table.alvin_rt_priv_2",
            "aws_subnet.alvin_subnet_1a",
            "aws_subnet.alvin_subnet_2a",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alvin_sn_rt_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df57520064f081e8",
            "route_table_id": "rtb-07fd451c3d9004351",
            "subnet_id": "subnet-014e70c6796c7b665"
          },
          "dependencies": [
            "aws_eip.alvin_eip_2",
            "aws_nat_gateway.alvin_nat_2",
            "aws_route_table.alvin_rt_priv_3",
            "aws_subnet.alvin_subnet_1b",
            "aws_subnet.alvin_subnet_2b",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alvin_sn_rt_3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2e95e1c9ceb842e",
            "route_table_id": "rtb-02f23a765abcc6dbd",
            "subnet_id": "subnet-01c62251a24b45e35"
          },
          "dependencies": [
            "aws_eip.alvin_eip_1",
            "aws_nat_gateway.alvin_nat_1",
            "aws_route_table.alvin_rt_priv_2",
            "aws_subnet.alvin_subnet_1a",
            "aws_subnet.alvin_subnet_3a",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "alvin_sn_rt_3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f65f9e928314d780",
            "route_table_id": "rtb-07fd451c3d9004351",
            "subnet_id": "subnet-0ab5a266aecf0893c"
          },
          "dependencies": [
            "aws_eip.alvin_eip_2",
            "aws_nat_gateway.alvin_nat_2",
            "aws_route_table.alvin_rt_priv_3",
            "aws_subnet.alvin_subnet_1b",
            "aws_subnet.alvin_subnet_3b",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:security-group/sg-0403e8a29674cd1a3",
            "description": "Enable HTTP/HTTPS access on Port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound connections from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0403e8a29674cd1a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP access for ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS access for ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alvin_alb_sg",
            "name_prefix": "",
            "owner_id": "105976787140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "alvin_alb_sg",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "alvin_alb_sg",
              "Terraform": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alvin_bh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:security-group/sg-0c310bf441a5c3bba",
            "description": "Bastion Host, Enable SSH access on Port 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound from Bastion Host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0c310bf441a5c3bba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Bastion Host SG, SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alvin_bastion_host_sg",
            "name_prefix": "",
            "owner_id": "105976787140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "alvin_bh_SSH_sg",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "alvin_bh_SSH_sg",
              "Terraform": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alvin_webapp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:security-group/sg-00369770a2ad88d22",
            "description": "Enable HTTP/HTTPS access on Port 8080/443 via ALB and SSH on Port 22 via BH SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound from webserver",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00369770a2ad88d22",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP Port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0403e8a29674cd1a3"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTPS Port",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0403e8a29674cd1a3"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c310bf441a5c3bba"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "alvin_webapp_sg",
            "name_prefix": "",
            "owner_id": "105976787140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "alvin_webapp_sg",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "alvin_webapp_sg",
              "Terraform": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.alvin_bh_sg",
            "aws_vpc.alvin_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mariadb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:security-group/sg-074e5443d60cc1b82",
            "description": "Enable MySQL/Aurora Access on Port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound from MariaDB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074e5443d60cc1b82",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL/Aurora Access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00369770a2ad88d22"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "alvin_mariadb_sg",
            "name_prefix": "",
            "owner_id": "105976787140",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "alvin_mariadb_sg",
              "Terraform": "Yes"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "alvin_mariadb_sg",
              "Terraform": "Yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.alvin_bh_sg",
            "aws_security_group.alvin_webapp_sg",
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alvin_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:subnet/subnet-04f00f5818d426b47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "70.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f00f5818d426b47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105976787140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alvin_pub_subnet_1a"
            },
            "tags_all": {
              "Name": "alvin_pub_subnet_1a"
            },
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alvin_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:subnet/subnet-09484f1ab2d0b5ef9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "70.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09484f1ab2d0b5ef9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105976787140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alvin_pub_subnet_1b"
            },
            "tags_all": {
              "Name": "alvin_pub_subnet_1b"
            },
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alvin_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:subnet/subnet-09bb06f8c914d14db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "70.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09bb06f8c914d14db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105976787140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alvin_priv_subnet_2a_app"
            },
            "tags_all": {
              "Name": "alvin_priv_subnet_2a_app"
            },
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alvin_subnet_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:subnet/subnet-014e70c6796c7b665",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "70.0.48.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014e70c6796c7b665",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105976787140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alvin_priv_subnet_2b_app"
            },
            "tags_all": {
              "Name": "alvin_priv_subnet_2b_app"
            },
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alvin_subnet_3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:subnet/subnet-01c62251a24b45e35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "70.0.64.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c62251a24b45e35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105976787140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alvin_priv_subnet_3a_db"
            },
            "tags_all": {
              "Name": "alvin_priv_subnet_3a_db"
            },
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alvin_subnet_3b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:subnet/subnet-0ab5a266aecf0893c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "70.0.80.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab5a266aecf0893c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105976787140",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "alvin_priv_subnet_3b_db"
            },
            "tags_all": {
              "Name": "alvin_priv_subnet_3b_db"
            },
            "vpc_id": "vpc-01663faaf221c0d0e"
          },
          "dependencies": [
            "aws_vpc.alvin_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "alvin_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:105976787140:vpc/vpc-01663faaf221c0d0e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "70.0.0.0/16",
            "default_network_acl_id": "acl-022a4206d8ad6081b",
            "default_route_table_id": "rtb-090039f8e220f51fe",
            "default_security_group_id": "sg-007f099f755c771d7",
            "dhcp_options_id": "dopt-0123296f785a02b44",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01663faaf221c0d0e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090039f8e220f51fe",
            "owner_id": "105976787140",
            "tags": {
              "Name": "alvin_vpc"
            },
            "tags_all": {
              "Name": "alvin_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}